--- a/lib/canonical/launchpad/offline.html
+++ b/lib/canonical/launchpad/offline.html
@@ -4,77 +4,27 @@
       lang="en">
   <head>
     <title>Launchpad is offline</title>
-    <style type="text/css" media="screen">
-      body {
-        background-color: #fcfcfc;
-        font-family: sans-serif;
-        margin: 0;
-        padding: 0.25em 0.75em 0.5em 0.75em;
-      }
-      .header, .footer {
-        font-family: "Lucida Grande", "Charcoal", sans-serif;
-        font-size: smaller;
-      }
-      .footer {
-        text-align: center;
-      }
-      .login {
-        text-align: right;
-        min-height: 1.75em;
-      }
-      .hierarchy, .facets, .footer {
-        padding: 0.25em;
-      }
-      .hierarchy, .footer {
-        background-color: #dee7ec;
-        color: inherit;
-      }
-      .facets {
-        background-color: #8cacbb;
-        color: white;
-        font-weight: bold;
-        margin: 0 0 1em 0;
-        min-height: 1.5em;
-      }
-      h1 {
-      	color: #000066;
-      	font-family: "Lucida Grande", sans-serif;
-      	font-weight: normal;
-      	margin-top: 0;
-      	text-align: left;
-      }
+    <style type="text/css" media="screen, print">
+      @import url(https://launchpad.net/+icing/rev5/+style-slimmer.css);
     </style>
   </head>
-
   <body>
-
-    <div class="header">
-      <div class="login"></div>
-      <div class="hierarchy">Launchpad</div>
-      <ul class="facets"></ul>
+    <div id="topline"></div>
+    <div id="locationbar"></div>
+      <div id="nonhelp">
+        <!--id="mainarea"-->
+          <div>
+          <h1 class="exception">Sorry, you can't do this right now</h1>
+            <p id="application-summary">
+              Launchpad is offline at the moment for maintenance. It should be back, better than ever, soon. Thanks for your patience.
+            <address>The Launchpad team</address>
+            </p>
+        <div id="globalfooter">
+          <div id="copyright">
+            Copyright&nbsp;2004-2007&nbsp;<a href="http://canonical.com/">Canonical&nbsp;Ltd.</a>
+          </div>
+        </div><!--id="globalfooter"-->
+      </div><!--id="nonhelp"-->
     </div>
-
-    <h1>Sorry</h1>
-    <p>
-      Launchpad is offline at the moment for an upgrade. It should be back, better than ever, within an hour. Thanks for your patience.
-    </p>
-    <address>The Launchpad team</address>
-                </td>
-
-                <!-- start of right (by default at least) column -->
-                <td id="portal-column-two">
-                </td>
-                <!-- end of the right (by default at least) column -->
-
-            </tr>
-        </tbody>
-    </table>
-    <!-- end column wrapper -->
-
-    <div class="visualClear">&nbsp;</div>
-
-    <div class="footer">
-        Copyright 2004-2006 Canonical Ltd.
-    </div>
-</body>
+  </body>
 </html>
