Moved pop-up help image into the tree, on flacoste's advice.

--- a/lib/lp/soyuz/help/ppa-sources-list.html
+++ b/lib/lp/soyuz/help/ppa-sources-list.html
@@ -19,7 +19,7 @@
     <p><code>deb http://ppa.launchpad.net/awn-testing/ubuntu jaunty main</code></p>
     <p><strong>Step 2:</strong> On your Ubuntu computer, open <em>System > Administration > Software Sources</em>.</p>
     <p><strong>Step 3:</strong> Click the <em>Third Party Software</em> tab.</p>
-    <img src="https://help.launchpad.net/HelpText?action=AttachFile&do=get&target=software-sources-3rdparty-tab.png" alt="Screen shot of the top tabs in the Software Sources app" style="margin-bottom: 15px;" />
+    <img src="images/software-sources-3rdparty-tab.png" alt="Screen shot of the top tabs in the Software Sources app" style="margin-bottom: 15px;" />
     <p><strong>Step 4:</strong> Click the <em>Add</em> button.</p>
     <p><strong>Step 5:</strong> Paste the line you copied in step 1 and click the <em>Add Source</em> button.
     <p><strong>Step 6:</strong> Now copy the second line from the second line from the <em>apt sources.list entries</em> section of the PPA overview page and paste it in just as you did in steps 4 and 5.</p>
