Fix a few errors in 8552.

--- a/lib/lp/soyuz/help/ppa-sources-list.html
+++ b/lib/lp/soyuz/help/ppa-sources-list.html
@@ -45,7 +45,7 @@
 
 
 
-    <p><a href="https://help.launchpad.net/OpenID"
+    <p><a href="https://help.launchpad.net/Packaging/PPA"
       target="_top">Read more about Personal Package Archives</a> in our help wiki.
     </p>
   </body>
