--- a/lib/canonical/launchpad/help/translations/permissions-policies.html
+++ b/lib/canonical/launchpad/help/translations/permissions-policies.html
@@ -11,23 +11,56 @@
   <body>
     <h1>Translation permission policies</h1>
 
-    <p>Each project and distribution can choose what they feel to be the right mix of openness and review for their translations.</p>
+    <p>
+      Each project and distribution can choose what they feel to be the right
+      mix of openness and control for their translations.
+    </p>
 
-    <p>Launchpad offers four ready-made permission policies:</p>
+    <p>
+      Launchpad offers four permission policies:
+    </p>
 
     <ul>
-      <li><strong>Open:</strong> anyone can submit translations directly to your project in Launchpad. Great for encouraging drive-by contributions.</li>
-      <li><strong>Structured:</strong> if your project's translation group has assigned an individual or team to a particular language, only that person or members of that team can review and accept translation strings for that language. Anyone can suggest a translation for those languages, though. For languages that aren't covered by a translation group, anyone can directly submit a translation.</li>
-      <li><strong>Restricted:</strong> similar to structured, except that translations are closed on languages that don't have an individual or team assigned to it within the translation group.</li>
-      <li><strong>Closed:</strong> only people or teams appointed in the appropriate translation group can suggest or make translations. Translation is closed to everyone else. This is ideal if your project requires an agreement to transfer copyright before starting work.</li>
-
+      <li><strong>Open:</strong> anyone can submit translations directly to
+          your project in Launchpad. Great for encouraging drive-by
+          contributions.</li>
+      <li><strong>Structured:</strong> if your project's translation group has
+          assigned an individual or team to a particular language, only that
+          person or members of that team can review and accept translation
+          strings for that language. Anyone can suggest a translation for
+          those languages, though. For languages that aren't covered by a
+          translation group, anyone can directly submit a translation.</li>
+      <li><strong>Restricted:</strong> ideal if your priority is to manage
+           translation quality, or if translation to some languages is managed
+           elsewhere. It is similar to Structured. However, the ability to
+           translate is unavailable for those languages that don't have an
+           individual or team assigned to it within the translation group.
+      </li>
+      <li><strong>Closed:</strong> only people or teams appointed in the
+          appropriate translation group can suggest or make translations.
+          Translation is closed to everyone else. This is ideal if your
+          project requires an agreement to transfer copyright before starting
+          work.</li>
     </ul>
 
-    <p>Unless you're making a quick correction to a translation, you should get in touch with the project's translations community before you start work. That way you'll be able to find out more about how they work. Follow the link to the project's translations group to contact them.</p>
+    <p>
+      Unless you're making a quick correction to a translation, you should
+      get in touch with the project's translations community before you start
+      work. That way you'll be able to find out more about how they work.
+      Follow the link to the project's translations group to contact them.
+    </p>
 
-    <p>If you're a project owner, you can set your project's permissions policy at https://translations.launchpad.net/<your-project>/+changetranslators.</p>
+    <p>
+      If you're a project owner, you can set your project's permissions
+      policy at <code>
+      https://translations.launchpad.net/<your-project>/+changetranslators
+      </code>.
+    </p>
 
-    <p>There's <a href="https://help.launchpad.net/Translations" target="_blank">more help with translations</a> in our help wiki.</p>
+    <p>
+      There's <a href="https://help.launchpad.net/Translations"
+      target="_blank">more help with translations</a> in our help wiki.
+    </p>
 
   </body>
 </html>
