Further changes arising from jtv's review.

--- a/lib/canonical/launchpad/help/translations/permissions-policies.html
+++ b/lib/canonical/launchpad/help/translations/permissions-policies.html
@@ -37,16 +37,18 @@
            individual or team assigned to it within the translation group.
       </li>
       <li><strong>Closed:</strong> only people or teams appointed in the
-          appropriate translation group can suggest or make translations.
-          Translation is closed to everyone else. This is ideal if your
-          project requires an agreement to transfer copyright before starting
-          work.</li>
+          translation group can suggest or make translations. Translation is
+          closed to everyone else. This is ideal if your project requires an
+          agreement to transfer copyright before starting work.</li>
     </ul>
 
     <p>
-      Unless you're making a quick correction to a translation, you should
-      get in touch with the project's translations community before you start
-      work. That way you'll be able to find out more about how they work.
+      Make your translations count!  Unless you're just making a quick
+      correction, you should get in touch with the project's translation
+      community before you start work. That way you can learn where your help
+      is most needed, what words they use to translate and so on.
+    </p>
+    <p>
       Follow the link to the project's translations group to contact them.
     </p>
 
