One more update from jtv's review.

--- a/lib/canonical/launchpad/help/translations/permissions-policies.html
+++ b/lib/canonical/launchpad/help/translations/permissions-policies.html
@@ -46,7 +46,8 @@
       Make your translations count!  Unless you're just making a quick
       correction, you should get in touch with the project's translation
       community before you start work. That way you can learn where your help
-      is most needed, what words they use to translate and so on.
+      is most needed, what words they use to translate common terms and what
+      gives your translations the best chance of being approved.
     </p>
     <p>
       Follow the link to the project's translations group to contact them.
