--- a/lib/canonical/launchpad/javascript/registry/tests/milestone_table.html
+++ b/lib/canonical/launchpad/javascript/registry/tests/milestone_table.html
@@ -5,41 +5,18 @@
 
   <!-- YUI 3.0 Setup -->
   <script type="text/javascript" src="../../../icing/yui/current/build/yui/yui.js"></script>
+  <script type="text/javascript" src="../../../icing/lazr/build/lazr.js"></script>
   <link rel="stylesheet" href="../../../icing/yui/current/build/cssreset/reset.css"/>
   <link rel="stylesheet" href="../../../icing/yui/current/build/cssfonts/fonts.css"/>
   <link rel="stylesheet" href="../../../icing/yui/current/build/cssbase/base.css"/>
+  <link rel="stylesheet" href="../../test.css" />
 
   <!-- The module under test -->
   <script type="text/javascript" src="../milestone_table.js"></script>
 
   <!-- The test suite -->
   <script type="text/javascript" src="test_milestone_table.js"></script>
-  <style>
-  /* Taken and customized from testlogger.css */
-  #log .yui-console-content { width:44em }
-  #log .yui-console .yui-console-bd { height:30em }
-  #log .yui-console .yui-console-controls { display:none; }
-  #log .yui-console .yui-console-hd { display:none; }
-  #log .yui-console .yui-console-ft { position:absolute;top:0em; }
 
-  #log .yui-console-entry-src { display:none; }
-
-  #log .yui-console-entry-pass .yui-console-entry-cat {
-      background-color: green;
-      font-weight: bold;
-      color: white;
-  }
-  #log .yui-console-entry-fail .yui-console-entry-cat {
-      background-color: red;
-      font-weight: bold;
-      color: white;
-  }
-  #log .yui-console-entry-ignore .yui-console-entry-cat {
-      background-color: #666;
-      font-weight: bold;
-      color: white;
-  }
-  </style>
 </head>
 <body class="yui-skin-sam">
   <table id="series-trunk" class="listing">
