Changes following Edwin's review

--- a/lib/canonical/launchpad/help/translations/getting-started-for-your-project.html
+++ b/lib/canonical/launchpad/help/translations/getting-started-for-your-project.html
@@ -27,13 +27,13 @@
         about translation groups &gt;</a>
       </li>
       <li>
-        select a translation permission policy &mdash; <a
+        select a translation permissions policy &mdash; <a
         href="/+help/permissions-policies.html">Read about permissions
         policies &gt;</a>
       </li>
       <li>
-        prepare then import your project's translation templates and any existing
-        translations &mdash; <a
+        format then import your project's translation templates and any
+        existing translations &mdash; <a
         href="https://help.launchpad.net/Translations/ImportPolicy"
         target="_blank">Read how to format and import your templates &gt;</a>
       </li>
