Further changes following allenap's input. Adds the help link to the advanced search page

--- a/lib/canonical/launchpad/help/bugs/tag-search.html
+++ b/lib/canonical/launchpad/help/bugs/tag-search.html
@@ -47,8 +47,9 @@
       </li>
       <li>
         <strong>Find bugs that have either the <em>test</em> tag or do not
-        have the <ui> tag:</strong> search for <code>test -ui</test> and
-        select the <em>Any</em> radio button.
+        have the <em>ui</em> tag:</strong> search for <code>test -ui</code>
+        and select the <em>Any</em> radio button.
+      </li>
       <li>
         <strong>Find all bugs with one or more tags:</strong> search for
         <code>*</code>
@@ -58,7 +59,7 @@
       </li>
     </ul>
 
-    <p>You can mix the different types of search.
+    <p>You can mix the different types of search.</p>
 
   </body>
 </html>
