--- a/lib/canonical/launchpad/help/bugs/tag-search.html
+++ b/lib/canonical/launchpad/help/bugs/tag-search.html
@@ -24,7 +24,7 @@
     </p>
 
     <p>
-      To search for the absence of a particular bug, place a minus sign
+      To search for the absence of a particular bug tag, place a minus sign
       before its name: e.g. <code>-test</code>
     </p>
 
