--- a/lib/canonical/launchpad/javascript/lp/tests/test_lp_collapsibles.html
+++ b/lib/canonical/launchpad/javascript/lp/tests/test_lp_collapsibles.html
@@ -11,14 +11,17 @@
   <link rel="stylesheet" href="../../test.css" />
 
   <!-- The module under test -->
-  <script type="text/javascript" src="../lp_dynamic_dom_updater.js"></script>
+  <script type="text/javascript" src="../lp.js"></script>
 
   <!-- The test suite -->
   <script type="text/javascript" src="test_lp_collapsibles.js"></script>
 </head>
 <body class="yui-skin-sam">
-  <fieldset class="collapsible collapsed">
-    <legend>My expander, let me collapse it</legend>
-  </fieldset>
+  <div id="container-of-stuff">
+    <fieldset class="collapsible collapsed">
+      <legend>My expander, let me collapse it</legend>
+      <p>Here's some content</p>
+    </fieldset>
+  </div>
 </body>
 </html>
