activate_collapsibles() will now auto-collapse collapsed collapsibles. Try saying that three times fast...

--- a/lib/canonical/launchpad/javascript/lp/tests/test_lp_collapsibles.html
+++ b/lib/canonical/launchpad/javascript/lp/tests/test_lp_collapsibles.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../test.css" />
 
   <!-- The module under test -->
+  <script type="text/javascript" src="../../../icing/lazr/build/effects/effects.js"></script>
   <script type="text/javascript" src="../lp.js"></script>
 
   <!-- The test suite -->
