Initial wording changes for mpt.

--- a/lib/lp/soyuz/help/ppa-sources-list.html
+++ b/lib/lp/soyuz/help/ppa-sources-list.html
@@ -22,7 +22,7 @@
     <img src="images/software-sources-3rdparty-tab.png" alt="Screen shot of the top tabs in the Software Sources app" style="margin-bottom: 15px;" />
     <p><strong>Step 4:</strong> Click the <em>Add</em> button.</p>
     <p><strong>Step 5:</strong> Paste the line you copied in step 1 and click the <em>Add Source</em> button.
-    <p><strong>Step 6:</strong> Now copy the second line from the second line from the <em>apt sources.list entries</em> section of the PPA overview page and paste it in just as you did in steps 4 and 5.</p>
+    <p><strong>Step 6:</strong> Now copy the second line from the <em>apt sources.list entries</em> section of the PPA overview page and paste it in just as you did in steps 4 and 5.</p>
 
    <p>When prompted, reload the software sources information. Don't worry if you see a warning about unverified software sources; we're going to fix that next.</p>
 
