--- a/lib/canonical/launchpad/javascript/bugs/tests/test_me_too.html
+++ b/lib/canonical/launchpad/javascript/bugs/tests/test_me_too.html
@@ -21,33 +21,8 @@
   <!-- The test suite -->
   <script type="text/javascript" src="test_me_too.js"></script>
 
-  <style type="text/css">
-  /* Taken and customized from testlogger.css */
-  #log .yui-console-content { width:44em }
-  #log .yui-console .yui-console-bd { height:30em }
-  #log .yui-console .yui-console-controls { display:none; }
-  #log .yui-console .yui-console-hd { display:none; }
-  #log .yui-console .yui-console-ft { position:absolute;top:0em; }
-
-  #log .yui-console-entry-src { display:none; }
-
-  #log .yui-console-entry-pass .yui-console-entry-cat {
-      background-color: green;
-      font-weight: bold;
-      color: white;
-  }
-  #log .yui-console-entry-fail .yui-console-entry-cat {
-      background-color: red;
-      font-weight: bold;
-      color: white;
-  }
-  #log .yui-console-entry-ignore .yui-console-entry-cat {
-      background-color: #666;
-      font-weight: bold;
-      color: white;
-  }
-  </style>
-
+  <!-- Test layout -->
+  <link rel="stylesheet" href="../../test.css" />
   <style type="text/css">
     /* CSS classes specific to this test */
     .unseen { display: none; }
