--- a/lib/lp/code/javascript/tests/test_productseries-setbranch.html
+++ b/lib/lp/code/javascript/tests/test_productseries-setbranch.html
@@ -5,15 +5,15 @@
   <title>stroppy trunk series : Series trunk : stroppy</title>
 
   <!-- YUI 3.0 Setup -->
-  <script type="text/javascript" src="../../../icing/yui/yui/yui.js"></script>
-  <script type="text/javascript" src="../../../icing/lazr/build/lazr.js"></script>
-  <link rel="stylesheet" href="../../../icing/yui/cssreset/reset.css"/>
-  <link rel="stylesheet" href="../../../icing/yui/cssfonts/fonts.css"/>
-  <link rel="stylesheet" href="../../../icing/yui/cssbase/base.css"/>
-  <link rel="stylesheet" href="../../test.css" />
+  <script type="text/javascript" src="../../../../canonical/launchpad/icing/yui/yui/yui.js"></script>
+  <script type="text/javascript" src="../../../../canonical/launchpad/icing/lazr/build/lazr.js"></script>
+  <link rel="stylesheet" href="../../../../canonical/launchpad/icing/yui/cssreset/reset.css"/>
+  <link rel="stylesheet" href="../../../../canonical/launchpad/icing/yui/cssfonts/fonts.css"/>
+  <link rel="stylesheet" href="../../../../canonical/launchpad/icing/yui/cssbase/base.css"/>
+  <link rel="stylesheet" href="../../../../canonical/launchpad/javascript/test.css" />
+  <script type="text/javascript" src="../../../../canonical/launchpad/lp/lp.js"></script>
 
   <!-- The module under test -->
-  <script type="text/javascript" src="../../lp/lp.js"></script>
   <script type="text/javascript" src="../productseries-setbranch.js"></script>
   <script type="text/javascript">
     YUI().use('lp.code.productseries_setbranch', function(Y) {
