--- a/lib/lp/translations/help/working-modes.html
+++ b/lib/lp/translations/help/working-modes.html
@@ -9,41 +9,43 @@
           href="/+icing/yui/current/build/cssbase/base.css" />
   </head>
   <body>
-    <h1>Translation working modes</h1>
+    <h1>Switching between "translator" and "reviewer" modes</h1>
 
     <p>
-      When you have full access to translations, all your new translations
-      will be automatically applied as the new current translations. This is
-      the desire result when reviewing others translations or working in
-      small teams. Adding a new suggestion will require to explicitly check
-      the "Someone needs to review this translation" checkbox.
-    </p>
-
-    <p>
-      When working in teams using a peer review process as a measurement 
-      translations quality assurance, the previously described behaviour
-      is not suitable, as you will have to manually check the
-      "Someone needs to review this translation" checkbox after adding
-      each new translation.
-    </p>
-
-    <p>
-      To deal with these different use cases, the following working modes
-      are available to persons with full access to translations:
+      If you're making translations for a project that uses a <em>Structured
+      </em> or <em>Restricted</em> <a href=/+help/permissions-policies.html">
+      permissions policy</a> <strong>and</strong> you're a member of the
+      appropriate <a href=/+help/translation-groups.html">translation team</a>
+      you can work in one of two modes:
     </p>
 
     <ul>
-      <li><strong>Reviewer:</strong> This is the default working mode.
-      All changes will be automatically approved as new translations. In order
-      to add a suggestion, you will have to manually check the "Someone needs
-      to review this translation" checkbox.</li>
-      <li><strong>Translator:</strong> When entering new translations, the
-      "Someone needs to review this translation" checkbox will be
-      automatically checked and the new translations will be added as
-      suggestions. In order to apply the new translation, you will have to
-      manually uncheck the "Someone needs to review this translation"
-      checkbox.</li>
+      <li>
+        <strong>Reviewer:</strong> This is the default working mode. All
+        changes you make are approved automatically. If you want to make a
+        suggestion, rather than a new translation, you need to manually select
+        the <em>Someone needs to review this translation</em> check-box.
+      </li>
+      <li>
+        <strong>Translator:</strong> When entering new translations, they're
+        treated as suggestions that someone else needs to review. You can make
+        a direct translation by deselecting the <em>Someone needs to review
+        this translation</em> check-box.</li>
     </ul>
+
+    <h2>How this affects team workflows</h2>
+
+    <p>
+      When you're reviewing translations made by other people, or you're
+      working in a small team, you usually want your translations to be applied
+      automatically. This is when you'd choose <em>Reviewer</em> mode.
+    </p>
+
+    <p>
+      However, if you're working in a team that uses a peer review process
+      <em>Translator</em> mode will be more suitable as it holds each of your
+      translations as suggestions that should be reviewed by someone else.
+    </p>
 
     <p>
       There's <a href="https://help.launchpad.net/Translations"
