Updated the bug heat pop-up help to correctly state that the score is shown as a mouseover on the bug heat flames.

--- a/lib/lp/bugs/help/bug-heat.html
+++ b/lib/lp/bugs/help/bug-heat.html
@@ -25,9 +25,8 @@
     <p>
       Launchpad works out how many flames to light by calculating a bug heat
       score and then seeing how that compares with the bug heat of other bugs
-      for that project. However, because the number itself doesn't mean
-      anything unless viewed in the context of other bugs in the project,
-      Launchpad doesn't display the bug heat score itself.
+      for that project. If you want to see the bug heat score itself, hover
+      your mouse over the flames icon.
     </p>
 
     <p>
