Fixes a typo and emphasises that official bug tags are preferred.

--- a/lib/lp/bugs/help/tag-help.html
+++ b/lib/lp/bugs/help/tag-help.html
@@ -14,18 +14,17 @@
     <p>
       A bug tag can be anything that you think will help better categorise the
       bug report.
-
-      For example, if it's a user interface bug you might tag it with
-      <code>UI</code>.
-
     </p>
 
-    <h2>Official bug tags</h2>
-
-      Each project can define official bug tags. When you're adding a bug tag
-      to a bug report, Launchpad will offer to automcomplete matching official
-      bug tags.
+    <p>
+      For example, if it's a user interface bug you might tag it with <code>UI
+      </code>.
     </p>
 
+    <p>
+      Where one exists, you should use an official project bug tag. Each
+      project can define its own official bug tags. Launchpad will offer to
+      autocomplete matching official bug tags.
+    </p>
   </body>
 </html>
