--- a/lib/lp/bugs/javascript/tests/subscriber.html
+++ b/lib/lp/bugs/javascript/tests/subscriber.html
@@ -4,17 +4,17 @@
 
      <!-- YUI 3.0 Setup -->
     <script type="text/javascript"
-      src="../../../../../../lazr-js/build/yui/yui/yui.js"></script>
+      src="../../../../../lazr-js/build/yui/yui/yui.js"></script>
     <script type="text/javascript"
-      src="../../../../../../lazr-js/build/lazr.js"></script>
+      src="../../../../../lazr-js/build/lazr.js"></script>
     <link rel="stylesheet"
-      href="../../../../../../lazr-js/build/yui/cssreset/reset.css"/>
+      href="../../../../../lazr-js/build/yui/cssreset/reset.css"/>
     <link rel="stylesheet"
-      href="../../../../../../lazr-js/build/yui/cssfonts/fonts.css"/>
+      href="../../../../../lazr-js/build/yui/cssfonts/fonts.css"/>
     <link rel="stylesheet"
-      href="../../../../../../lazr-js/build/yui/cssbase/base.css"/>
+      href="../../../../../lazr-js/build/yui/cssbase/base.css"/>
     <link rel="stylesheet"
-      href="../../test.css" />
+      href="../../../../canonical/launchpad/javascript/test.css" />
 
     <!-- The module under test -->
     <script type="text/javascript"
@@ -59,7 +59,8 @@
           <a href="+subscribe"
             class="subscribed-true dup-subscribed-false"
             id="unsubscribe-tester" title="Unsubscribe JS Test User">
-            <img class="unsub-icon" src="../../../images/remove.png"
+            <img class="unsub-icon"
+              src="../../../../canonical/launchpad/images/remove.png"
               id="unsubscribe-icon-tester">
           </a>
         </div>
@@ -74,7 +75,8 @@
           <a href="+subscribe"
             class="subscribed-true dup-subscribed-false"
             id="unsubscribe-some-team" title="Unsubscribe Some Team">
-            <img class="unsub-icon" src="../../../images/remove.png"
+            <img class="unsub-icon"
+              src="../../../../canonical/launchpad/images/remove.png"
               id="unsubscribe-icon-some-team">
           </a>
         </div>
