--- a/lib/lp/bugs/javascript/tests/test_me_too.html
+++ b/lib/lp/bugs/javascript/tests/test_me_too.html
@@ -20,7 +20,7 @@
     src="../../../../canonical/launchpad/javascript/client/client.js"></script>
 
   <!-- The module under test -->
-  <script type="text/javascript" src="../bugtask-index.js"></script>
+  <script type="text/javascript" src="../bugtask_index.js"></script>
 
   <!-- The test suite -->
   <script type="text/javascript" src="test_me_too.js"></script>
