Update paths so the file will work from windmill.

--- a/lib/lp/bugs/javascript/tests/test_me_too.html
+++ b/lib/lp/bugs/javascript/tests/test_me_too.html
@@ -4,18 +4,20 @@
   <title>Status Editor</title>
 
   <!-- YUI 3.0 Setup -->
-  <script type="text/javascript" src="../../../../../lazr-js/build/yui/yui/yui.js"></script>
-  <link rel="stylesheet" href="../../../../../lazr-js/build/yui/cssreset/reset.css"/>
-  <link rel="stylesheet" href="../../../../../lazr-js/build/yui/cssfonts/fonts.css"/>
-  <link rel="stylesheet" href="../../../../../lazr-js/build/yui/cssbase/base.css"/>
+  <script type="text/javascript" src="../../../../canonical/launchpad/icing/yui/yui/yui.js"></script>
+  <link rel="stylesheet" href="../../../../canonical/launchpad/icing/yui/cssreset/reset.css"/>
+  <link rel="stylesheet" href="../../../../canonical/launchpad/icing/yui/cssfonts/fonts.css"/>
+  <link rel="stylesheet" href="../../../../canonical/launchpad/icing/yui/cssbase/base.css"/>
 
   <!-- Dependency -->
   <script type="text/javascript"
-    src="../../../../../lazr-js/build/lazr.js"></script>
+    src="../../../../canonical/launchpad/icing/lazr/build/lazr.js"></script>
   <script type="text/javascript"
-    src="../../../../../lazr-js/build/overlay/overlay.js"></script>
+    src="../../../../canonical/launchpad/icing/lazr/build/overlay/overlay.js">
+  </script>
   <script type="text/javascript"
-    src="../../../../../lazr-js/build/choiceedit/choiceedit.js"></script>
+    src="../../../../canonical/launchpad/icing/lazr/build/choiceedit/choiceedit.js">
+  </script>
   <script type="text/javascript"
     src="../../../../canonical/launchpad/javascript/client/client.js"></script>
 
