--- a/lib/lp/bugs/javascript/tests/test_subscriber.html
+++ b/lib/lp/bugs/javascript/tests/test_subscriber.html
@@ -4,15 +4,15 @@
 
      <!-- YUI 3.0 Setup -->
     <script type="text/javascript"
-      src="../../../../../lazr-js/build/yui/yui/yui.js"></script>
+      src="../../../../canonical/launchpad/icing/yui/yui/yui.js"></script>
     <script type="text/javascript"
-      src="../../../../../lazr-js/build/lazr.js"></script>
+      src="../../../../canonical/launchpad/icing/lazr/build/lazr.js"></script>
     <link rel="stylesheet"
-      href="../../../../../lazr-js/build/yui/cssreset/reset.css"/>
+      href="../../../../canonical/launchpad/icing/yui/cssreset/reset.css"/>
     <link rel="stylesheet"
-      href="../../../../../lazr-js/build/yui/cssfonts/fonts.css"/>
+      href="../../../../canonical/launchpad/icing/yui/cssfonts/fonts.css"/>
     <link rel="stylesheet"
-      href="../../../../../lazr-js/build/yui/cssbase/base.css"/>
+      href="../../../../canonical/launchpad/icing/yui/cssbase/base.css"/>
     <link rel="stylesheet"
       href="../../../../canonical/launchpad/javascript/test.css" />
 
