Fix bug heat help file link.

--- a/lib/lp/bugs/help/bug-heat.html
+++ b/lib/lp/bugs/help/bug-heat.html
@@ -183,7 +183,7 @@
 
     <p>
       <a target="_blank"
-      href="http://bazaar.launchpad.net/~launchpad-pqm/launchpad/db-devel/annotate/head:/lib/lp/bugs/scripts/bugheat.py">
+      href="http://bazaar.launchpad.net/~launchpad-pqm/launchpad/db-devel/annotate/head:/database/schema/trusted.sql#L1597">
       View the Launchpad code that calculates bug heat &gt;</a>.
     </p>
 
